# uav_gazebo

./: .gitignore  README.md
uav_gazebo/: CMakeLists.txt  package.xml
uav_gazebo/include/uav_gazebo/: uav_gazebo_plugin.hpp  utils.hpp
uav_gazebo/launch/: display.launch  drone.rviz  spawn.launch
uav_gazebo/script/: configure_controllers  example_control
uav_gazebo/src/: simple_drone_manager.cpp  uav_gazebo_plugin.cpp
uav_gazebo/urdf/: drone.xacro
uav_gazebo_msgs/: CMakeLists.txt  package.xml
uav_gazebo_msgs/cfg/: ControlGains.cfg
uav_gazebo_msgs/msg/: ControlMode.msg  PositionYawControl.msg  ThrustAttitudeControl.msg  ThrustTorqueControl.msg  ThrustVelocityControl.msg  VelocityYawRateControl.msg
uav_gazebo_msgs/srv/: GetMode.srv  Land.srv  SwitchMode.srv  Takeoff.srv
