<?xml version="1.0"?>
<package format="2">
  <name>uav_gazebo</name>
  <version>0.0.0</version>
  <description>Plugin to simulate and control UAVs in Gazebo</description>

  <maintainer email="franco.fusco@ls2n.fr">Franco FUSCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>uav_gazebo_msgs</depend>
  <depend>roscpp</depend>
  <depend>angles</depend>
  <depend>tf2_ros</depend>

</package>
