<?xml version="1.0"?>
<package format="2">
  <name>uav_gazebo_msgs</name>
  <version>0.0.0</version>
  <description>Messages to control UAVs in Gazebo</description>

  <maintainer email="franco.fusco@ls2n.fr">Franco FUSCO</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
